--- a/public/manifest.json
+++ b/public/manifest.json
@@ -29,12 +29,13 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["assets/content.js"]
+      "js": ["assets/content.js"],
+      "all_frames": true
     }
   ],
   "web_accessible_resources": [
     {
-      "resources": ["assets/*", "icon48.png", "icon128.png"],
+      "resources": ["icon48.png", "icon128.png"],
       "matches": ["<all_urls>"]
     }
   ]
