--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.0.0",
+    "@playwright/test": "^1.57.0",
     "@types/chrome": "^0.0.260",
     "@types/node": "^20.11.0",
     "@types/react": "^18.2.56",
@@ -28,6 +29,7 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.6",
     "globals": "^15.0.0",
+    "happy-dom": "^13.3.1",
     "postcss": "^8.4.35",
     "prettier": "^3.2.5",
     "tailwindcss": "^3.4.1",
@@ -35,8 +37,7 @@
     "typescript": "^5.2.2",
     "typescript-eslint": "^8.0.0-alpha.20",
     "vite": "^5.1.4",
-    "vitest": "^1.3.1",
-    "happy-dom": "^13.3.1"
+    "vitest": "^1.3.1"
   },
   "packageManager": "pnpm@10.26.0+sha512.3b3f6c725ebe712506c0ab1ad4133cf86b1f4b687effce62a9b38b4d72e3954242e643190fc51fa1642949c735f403debd44f5cb0edd657abe63a8b6a7e1e402"
 }
